# ma-advisor

./: .gitignore  main.py  pyproject.toml
agents/: base_agent.py
ma_advisor/: main.py
ma_advisor/agents/: basic_agent.py
tests/: README.md  test_basic_agent.py
utils/: model.py
